log/build_2021-06-22_17-03-57/pubsub/stderr.log
  File "/home/markros2/rosproject/install/pubsub/lib/python3.8/site-packages/pubsub/publisher.py", line 6
    global flag = 1
                ^
SyntaxError: invalid syntax

